--- a/plino/web/package.json
+++ b/plino/web/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "auth0-js": "^9.10.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.8.2",
