--- a/plino/web/package.json
+++ b/plino/web/package.json
@@ -11,7 +11,8 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.8"
+    "react-scripts": "^2.1.8",
+    "rebass": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
