--- a/plino/web/package.json
+++ b/plino/web/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
-    "rebass": "^3.1.0"
+    "rebass": "^3.1.0",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
